# geoComp

./: .gitignore  CMakeLists.txt  config.h.in  geoComp.cpp
leitor_obj/: CMakeLists.txt  leitor_obj.cpp  leitor_obj.hpp
lito_engine/: CMakeLists.txt
lito_engine/algebra/: Matriz_2.hpp  Matriz_3.hpp  Matriz_4.hpp  Operacoes.hpp  Vec_2.hpp  Vec_3.hpp  Vec_4.hpp  algebra_matriz.hpp  algebra_vetor.hpp  include_algebra.hpp  matriz_enum.hpp
lito_engine/camera/: Camera.h  Camera.inl  Canvas.h  main.cpp
lito_engine/engines/: Engine_OpenGl.cpp  Engine_OpenGl.h  Engine_SDL.cpp  Engine_SDL.h
lito_engine/envoltorios/: AABB_2d copy.h  AABB_2d.h  Circulo_2d.h  Circulo_2d_copy.h  Envoltorio_2d.h  Poligono_convexo_2d.h  Triangulo_2d.h
lito_engine/externalLibs/glew/: glew.pc
lito_engine/fisica/: fisica.cpp  fisica.hpp
lito_engine/io/: Leitor_imagem.cpp  Leitor_imagem.h  Teclado.cpp  Teclado.h
lito_engine/shaders/: Shader.cpp  Shader.h  shader.fs  shader.vs  shader_2.fs  shader_2.vs
